--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/yuehkchou/dotSocket/issues"
   },
-  "homepage": "https://github.com/yuehkchou/dotSocket#readme"
+  "homepage": "https://github.com/yuehkchou/dotSocket#readme",
+  "dependencies": {
+    "express": "^4.15.2",
+    "nodemon": "^1.11.0",
+    "socket.io": "^1.7.3"
+  }
 }
