--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "nodemon": "^1.11.0",
+    "path": "^0.12.7",
     "socket.io": "^1.7.3"
   }
 }
